[package]
name = "rustgb"
version = "0.1.0"
edition = "2021"
description = "A Gameboy / Gameboy Color Emulator written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
eframe = "0.26.2"
